feat: add EDA send events to Kafka

--- a/catalogo-productos/catalogproducts/src/main/resources/application.yml
+++ b/catalogo-productos/catalogproducts/src/main/resources/application.yml
@@ -11,6 +11,22 @@ spring:
       uri: mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@clusterfree.fvpary6.mongodb.net/?retryWrites=true&w=majority
       ssl-enabled: true
       database: ${MONGODB_DATABASE}
+  kafka:
+    bootstrap-servers: ${CLOUDKARAFKA_BROKERS}
+    jaas:
+      enabled: true
+    properties:
+      sasl:
+        mechanism: SCRAM-SHA-512
+        jaas.config: org.apache.kafka.common.security.scram.ScramLoginModule required username="${CLOUDKARAFKA_USERNAME}" password="${CLOUDKARAFKA_PASSWORD}";
+      security:
+        protocol: SASL_SSL
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      transaction-id-prefix: ${CLOUDKARAFKA_TOPIC_PREFIX}
+    topic-prefix: ${CLOUDKARAFKA_TOPIC_PREFIX}
+    client-id: ${CLOUDKARAFKA_TOPIC_PREFIX}catalog-products-microservice
 
 springdoc:
   api-docs:
