--- a/catalogo-productos/catalogproducts/src/main/resources/application.yml
+++ b/catalogo-productos/catalogproducts/src/main/resources/application.yml
@@ -4,6 +4,7 @@ server:
 spring:
   application:
     name: Catalog Products Microservice
+    description: Microservice for catalog products
     version: 1.0.0
     author: Martin Saman
   data:
